set standards for categories & tags

--- a/resume.html
+++ b/resume.html
@@ -77,7 +77,7 @@
         <p>Jie Cheng have been with Aerospace Engineering since 2007. Jie works on the area of dynamics, control and design. During doing a Ph.D. in NUST, Jie focused on modeling of a dual-spin flight vehicle with the quasi-steady method, including a flight simulation system and system identification with CFD &amp; experiments. Jie is experienced with dynamic modeling and simulation, which covers some knowledge and skills like mathematics, programing, computational methods et al. Besides, being a key member of several national projects equipped Jie with some basic skills of cooperation and management.</p>
       </li>
       <li>
-        <p>In 2014, Jie visited University of Bristol in UK as a Post-graduate Researcher. It is the first that Jie had to deal with open source codes and high performance computing. To accomplish a dynamic simulation of <a href="http://enu.kz/repository/2009/AIAA-2009-5727.pdf"><em>the multi-DoF Rig in wind tunnel</em></a>, Jie started learning OpenFOAM (a open source CFD toolkits) and Linux command lines. Since the door of computer science was opened, Jie keeps moving in the fantastic world and labelled himself as a “amateur”.</p>
+        <p>In 2014, Jie visited University of Bristol in UK as a Post-graduate Researcher. It is the first that Jie had to deal with open source codes and high performance computing. To accomplish a dynamic simulation of <a href="http://enu.kz/repository/2009/AIAA-2009-5727.pdf"><em>the multi-DoF Rig in wind tunnel</em></a>, Jie started learning OpenFOAM (an open source CFD toolkits) and Linux command lines. Since the door of computer science was opened, Jie keeps moving in the fantastic world and labelled himself as a “amateur”.</p>
       </li>
     </ul>
 
